# YPi-Platform

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
CRM/CRM/: settings.py
